--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -5,6 +5,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://registrations-pal-jo.apps.longs.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: http://registration-pal-jo.apps.longs.pal.pivotal.io
   services:
   - tracker-backlog-database
